--- a/main.css
+++ b/main.css
@@ -1,24 +1,27 @@
-html, body, #home {
+html,
+body,
+#home {
 	height: 100%;
 	overflow-x: hidden;
 }
 
 body {
 	background: url(./img/capa.png),
-				url(./img/ruido.png),
-				linear-gradient(50deg,#4b7ff0,#2926f8);
+		url(./img/ruido.png),
+		linear-gradient(50deg, #4b7ff0, #2926f8);
 	background-attachment: fixed;
 	font-family: 'Lato', Arial, Helvetica, sans-serif;
 }
 
 nav.navbar-transparente {
-	padding: 15px 0px;
-	background: rgba(0,0,0,0.6);
-	height: 140px;
+	padding: 25px;
+	background: rgba(0, 0, 0, 0.6);
+	height: 90px;
 }
 
 .navbar-light .navbar-nav .nav-link {
 	color: white;
+	margin-left: 15px;
 }
 
 .navbar-light .navbar-nav .nav-link:hover {
@@ -26,53 +29,63 @@ nav.navbar-transparente {
 }
 
 .navbar-light .navbar-toggler {
-    color: rgba(255,255,255,.5);
-    border-color: rgba(255,255,255,0.5);
+	color: rgba(255, 255, 255, .5);
+	border-color: rgba(255, 255, 255, 0.5);
 }
 
-.nav-item{
+.nav-item {
 	list-style: none;
 }
 
-
-#profile-op{
+#profile-op {
 	color: white;
+	margin-left: 15px;
 }
 
-#espacoEntrar{
+#espacoEntrar {
 	background-color: black;
 	position: absolute;
+	margin-top: 25px;
+	
 }
 
-#espacoEntrar a{
+#espacoEntrar a {
 	color: white;
 	text-decoration: none;
 	font-size: 12px;
 }
 
-.entrar-divider{
+.entrar-divider {
 	width: 100%;
-	height: .15em;  
+	height: .15em;
 	background: linear-gradient(270deg, #7371c0, #371b98, #2d21a0, #244b95, #2862bc, #615fdd);
-    background-size: 1400% 1400%;
-    animation: AnimationName 7s ease infinite;
+	background-size: 1400% 1400%;
+	animation: AnimationName 7s ease infinite;
 }
 
 @keyframes AnimationName {
-    0%{background-position:0% 51%}
-    50%{background-position:100% 50%}
-    100%{background-position:0% 51%}
+	0% {
+		background-position: 0% 51%
+	}
+
+	50% {
+		background-position: 100% 50%
+	}
+
+	100% {
+		background-position: 0% 51%
+	}
 }
 
 
-#premium-resgate{
+#premium-resgate {
 	display: flex;
 	border: none;
 	width: 100%;
-	background: linear-gradient(90deg, rgba(125,133,213,1) 0%, rgba(148,187,233,1) 100%);
+	background: linear-gradient(90deg, rgba(125, 133, 213, 1) 0%, rgba(148, 187, 233, 1) 100%);
 }
 
-.resgate-link{
+.resgate-link {
 	display: block;
 	margin-left: 12%;
 	margin-top: 20px;
@@ -81,34 +94,35 @@ nav.navbar-transparente {
 	font-size: 12px;
 }
 
-.resgate-link p{
+.resgate-link p {
 	margin-left: 10px;
 }
 
-.capa{
+.capa {
 	text-align: center;
 }
 
-.carousel-control-next, .carousel-control-prev{
+.carousel-control-next,
+.carousel-control-prev {
 	width: 5%;
 }
 
-.btn-custom{
+.btn-custom {
 	border-radius: 500px;
 	color: white;
 	text-transform: uppercase;
-	transition:  0.4s, color 0.4s;
+	transition: 0.4s, color 0.4s;
 	padding: 10px 20px;
 	border-radius: 500px;
 	-webkit-border-radius: 500px;
-    -moz-border-radius: 500px;
+	-moz-border-radius: 500px;
 }
 
-.btn-branco{
+.btn-branco {
 	border: 2px solid white;
 }
 
-.btn-branco:hover{
+.btn-branco:hover {
 	background-color: white;
 	color: black;
 }
@@ -122,31 +136,39 @@ nav.navbar-transparente {
 	color: white;
 }
 
-h1{
+h1 {
 	font-weight: 900px;
 	letter-spacing: -0.05em;
 	margin-bottom: 50px;
-	color:white;
+	color: white;
 }
 
-#feed{
+#feed {
 	background-color: black;
 	padding: 10px;
 	color: white;
 }
 
-.feed-divider{
+.feed-divider {
 	width: 100%;
-	height: .15em;  
+	height: .15em;
 	background: linear-gradient(270deg, #7371c0, #371b98, #2d21a0, #244b95, #2862bc, #615fdd);
-    background-size: 1400% 1400%;
-    animation: AnimationName 7s ease infinite;
+	background-size: 1400% 1400%;
+	animation: AnimationName 7s ease infinite;
 }
 
 @keyframes AnimationName {
-    0%{background-position:0% 51%}
-    50%{background-position:100% 50%}
-    100%{background-position:0% 51%}
+	0% {
+		background-position: 0% 51%
+	}
+
+	50% {
+		background-position: 100% 50%
+	}
+
+	100% {
+		background-position: 0% 51%
+	}
 }
 
 swiper-container {
@@ -167,10 +189,11 @@ swiper-slide {
 swiper-slide img {
 	display: block;
 	width: 100%;
+	height: 250px;
 	object-fit: cover;
 }
 
-.img__overlay{
+.img__overlay {
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -183,41 +206,41 @@ swiper-slide img {
 	opacity: 0;
 }
 
-.menu__desc_swi{
+.menu__desc_swi {
 	display: flex;
 }
 
-.menu__desc_swi button{
+.menu__desc_swi button {
 	color: white;
 
 }
 
-.menu__desc_swi button:hover{
+.menu__desc_swi button:hover {
 	color: #8ba9c2;
 
 }
 
-.menu__desc{
+.menu__desc {
 	display: flex;
 	justify-content: center;
 }
 
-.menu__desc button{
+.menu__desc button {
 	color: #000;
-	background: rgb(125,133,213);
-	background: linear-gradient(90deg, rgba(125,133,213,1) 0%, rgba(148,187,233,1) 100%);
+	background: rgb(125, 133, 213);
+	background: linear-gradient(90deg, rgba(125, 133, 213, 1) 0%, rgba(148, 187, 233, 1) 100%);
 }
 
-.menu__desc button:hover{
-	color:white;
+.menu__desc button:hover {
+	color: white;
 	background: #000;
 }
 
-#assistir-agr i{
+#assistir-agr i {
 	padding-right: 12px;
 }
 
-.desc_img__overlay{
+.desc_img__overlay {
 	position: absolute;
 	top: 0;
 	left: 25;
@@ -232,12 +255,12 @@ swiper-slide img {
 
 }
 
-.desc_img__overlay:hover{
+.desc_img__overlay:hover {
 	opacity: 2;
-	
+
 }
 
-.desc_img__title{
+.desc_img__title {
 	font-weight: bold;
 	font-size: 55px;
 	margin-top: 25px;
@@ -246,7 +269,7 @@ swiper-slide img {
 
 }
 
-.img__overlay:hover{
+.img__overlay:hover {
 	opacity: 1;
 	display: flex;
 	flex-direction: column;
@@ -254,7 +277,7 @@ swiper-slide img {
 	object-fit: cover
 }
 
-.img__title{
+.img__title {
 	align-self: start;
 	font-size: 10px;
 	font-weight: bold;
@@ -262,43 +285,43 @@ swiper-slide img {
 }
 
 .img__txt,
-.desc_img__text{
+.desc_img__text {
 	width: 100%;
 	font-size: 9px;
 	padding: 3px;
 	text-align: justify;
-	
-	
+
+
 }
 
-#bx-wrp-tt{
+#bx-wrp-tt {
 	margin-top: 30px;
 }
 
-#tutulos__spot{
+#tutulos__spot {
 	background-color: #000;
 	padding: 25px 0 25px 0;
-	
+
 }
 
-.titulo-1{
+.titulo-1 {
 	background-color: #000;
 	display: flex;
 	margin: 25px;
 }
 
-.spotlight-txt-ttl{
+.spotlight-txt-ttl {
 	font-size: 12px;
 	color: white;
 	padding: 10px;
 
 }
 
-.spotlight-txt-ttl h6{
+.spotlight-txt-ttl h6 {
 	font-size: 10px;
 }
 
-#destaque-bk{
+#destaque-bk {
 	display: flex;
 	justify-content: center;
 	margin: 25px;
@@ -306,115 +329,116 @@ swiper-slide img {
 }
 
 
-.destaque{
+.destaque {
 	display: flex;
 	justify-content: center;
 	width: 728px;
 	height: 572px;
 }
 
-#destaque-capa{
+#destaque-capa {
 	width: 100%;
 	margin-bottom: 25px;
 }
 
-.noticias{
+.noticias {
 	margin: 0;
-	background: rgb(125,133,213);
-	background: linear-gradient(90deg, rgba(125,133,213,1) 0%, rgba(148,187,233,1) 100%);
+	background: rgb(125, 133, 213);
+	background: linear-gradient(90deg, rgba(125, 133, 213, 1) 0%, rgba(148, 187, 233, 1) 100%);
 }
 
-.feed-header{
+.feed-header {
 	padding: 10px;
 	color: crgb(63, 61, 61);
 }
 
-.tpk-popular{
+.tpk-popular {
 	display: flex;
 	flex-direction: column;
-	padding: 10px;
-	
+	align-items: self-start;
+	justify-content: center;
 }
 
-.tpk-popular h6{
-	text-transform: uppercase;
-	font-weight: bold;
-	color: rgb(0, 0, 0);
-	margin-bottom: 15px;
-}
-
-
-h6 a{
+h6 a {
 	color: #000;
 	font-weight: bold;
 	text-decoration: none;
 	font-size: 15px;
 }
 
-h6 a:hover{
+h6 a:hover {
 	color: navy;
 	text-decoration: none;
 }
 
-p a{
+p a {
 	text-decoration: none;
-	color:rgb(0, 0, 0);
+	color: rgb(0, 0, 0);
 }
 
-#ntpk{
-	float: inline-start;
+#ntpk {
+	width: 100vw;
+	display: flex;
+	justify-content: space-between;
 }
 
-.tpk-wrap{
-	float: inline-start;
-	background: rgb(125,133,213);
-	background: linear-gradient(90deg, rgba(125,133,213,1) 0%, rgba(148,187,233,1) 100%);
+.tpk-wrap {
+	height: fit-content;
+	padding: 35px;
+	display: flex;
+	justify-content: space-around;
+	background: rgb(125, 133, 213);
+	background: linear-gradient(90deg, rgba(125, 133, 213, 1) 0%, rgba(148, 187, 233, 1) 100%);
 }
 
 .tpk-1,
-.tpk-2{
-	display: block;
-	
-}
+.tpk-2 {}
 
 .tpk-1 img,
-.tpk-2 img{
-	width: 269px;
-	height: 148px;
+.tpk-2 img {
+	width: 270px;
+	height: 150px;
+	margin-bottom: 10px;
 }
 
-.tpk-txt{
+.tpk-txt {
 	font-size: 12px;
 	text-decoration: none;
 	width: 269px;
 	height: 148px;
+	margin: 0;
+	text-align: justify;
+	padding: 0;
 }
 
-.tpk-text a{
+.tpk-text a {
 	text-decoration: none;
 }
 
-.tpk-recente{
+.tpk-recente {
 	display: flex;
 	flex-direction: column;
-	padding: 10px;
+	align-items: self-start;
+	justify-content: center;
 
 }
 
-.tpk-recente h6{
+.tpk-recente h6,
+.tpk-popular h6 {
 	text-transform: uppercase;
 	font-weight: bold;
 	color: rgb(0, 0, 0);
 	margin-bottom: 15px;
+	font-size: 22px;
 }
 
-.rec-txt{
+.rec-txt {
 	font-size: 12px;
 	text-decoration: none;
 	padding: 0 10px;
 }
 
-.rec-txt h5{
+.rec-txt h5 {
 	text-transform: uppercase;
 	font-weight: bold;
 	font-size: 10px;
@@ -422,140 +446,146 @@ p a{
 	margin-bottom: 10px;
 }
 
-h5 a{
+h5 a {
 	color: #000;
 	text-decoration: none;
 }
 
 .rec-1,
-.rec-2{
+.rec-2 {
 	display: flex;
 	margin-bottom: 5px;
 }
 
 .rec-1 img,
-.rec-2 img{
+.rec-2 img {
 	width: 150px;
 	height: 100px;
 }
 
-#jjk-spot-bk{
-	background: rgb(125,133,213);
-	background: linear-gradient(90deg, rgba(125,133,213,1) 0%, rgba(148,187,233,1) 100%);
+#jjk-spot-bk {
+	background: rgb(125, 133, 213);
+	background: linear-gradient(90deg, rgba(125, 133, 213, 1) 0%, rgba(148, 187, 233, 1) 100%);
 }
 
-#bk-spotlight{
+#bk-spotlight {
 	background-color: #000;
 	margin-top: 20px;
 	margin-bottom: 20px;
-	
+
 }
 
-.bx-spotlight{
+.bx-spotlight {
 	display: flex;
 }
 
-.bx-spotlight a img{
-	width: 200px;
-	margin: 30px;
+.bx-spotlight img {
+	object-fit: cover;
+	width: 750px;
+	margin: 0px;
 }
 
-.spotlight-txt{
-	margin: 10px;
+.spotlight-txt {
+	margin: 45px 0 0 200px;
 	text-align: justify;
-	
+	font-size: 14px;
+	width: 270px;
 }
 
-.spotlight-txt h4, a{
+.spotlight-txt h4,
+a {
 	color: white;
 	text-decoration: none;
 }
 
-.spotlight-txt h6{
+.spotlight-txt h6 {
 	font-size: 12px;
 	color: rgb(112, 110, 110);
 }
 
-.spotlight-txt i{
+.spotlight-txt i {
 	margin-right: 10px;
 }
 
-.spotlight-txt p{
+.spotlight-txt p {
 	color: white;
 }
 
-.btn-spot{
+.btn-spot {
 	background-color: #5c85df;
-	border:#5c85df;
+	border: #5c85df;
 	color: black;
 	font-weight: bold;
-	
+	margin: 5px;
+	width: 200px;
 }
 
-.btn-spot:hover{
+.btn-spot:hover {
 	background-color: #8ba9c2;
 }
 
-.btn-save-spot{
+.btn-save-spot {
 	background-color: transparent;
 	border: 1px solid #5c85df;
 	color: #5c85df;
 	font-weight: bold;
+	margin: 5px;
+	width: 200px;
 }
 
-.btn-save-spot:hover{
+.btn-save-spot:hover {
 	background-color: #8ba9c2;
 }
 
-#slime-spot-bk{
+#slime-spot-bk {
 	background-color: black;
-	
+
 }
 
-#bk-slime-spotlight{
+#bk-slime-spotlight {
 	background-color: black;
 	margin: 25px 0 25px 0;
 	padding: 25px 25px 0 25px;
 	display: flex;
 }
 
-.bx-slime-spotlight{
+.bx-slime-spotlight {
 	padding: 25px 50px 50px 20px;
-	
+
 }
 
-.card{
+.card {
 	margin-top: 25px;
 	margin-right: 25px;
 	background: linear-gradient(270deg, #040353, #371b98, #2d21a0, #244b95, #2862bc, #615fdd);
-    background-size: 1400% 1400%;
-    animation: AnimationName 7s ease infinite;
+	background-size: 1400% 1400%;
+	animation: AnimationName 7s ease infinite;
 }
 
 @keyframes AnimationName {
-    0%{background-position:0% 51%}
-    50%{background-position:100% 50%}
-    100%{background-position:0% 51%}
+	0% {
+		background-position: 0% 51%
+	}
+
+	50% {
+		background-position: 100% 50%
+	}
+
+	100% {
+		background-position: 0% 51%
+	}
 }
 
-/*.card{
-	color: white;
-	background: rgb(2,0,36);
-	background: linear-gradient(90deg, rgba(2,0,36,1) 16%, rgba(6,5,85,1) 29%, rgba(8,7,106,1) 40%, rgba(9,9,121,1) 47%, rgba(34,7,148,1) 55%, rgba(51,6,166,1) 67%, rgba(39,40,173,1) 79%, rgba(36,50,175,1) 83%, rgba(33,58,177,1) 86%, rgba(21,94,185,1) 100%);
-	margin-top: 25px;
-	margin-right: 25px;
-}*/
-
-ul{
+ul {
 	position: static;
 }
 
 
-.cd-info{
+.cd-info {
 	font-size: 10px;
 }
 
-.cd-exclusivo{
+.cd-exclusivo {
 	margin-top: 5px;
 	margin-bottom: 5px;
 	width: 100%;
@@ -565,7 +595,7 @@ ul{
 }
 
 .cd-exclusivo:hover,
-.cd-free:hover{
+.cd-free:hover {
 	margin-top: 5px;
 	background-color: #9ba1f036;
 	color: white;
@@ -576,7 +606,7 @@ ul{
 	font-size: 10px;
 }
 
-.cd-free{
+.cd-free {
 	margin-top: 5px;
 	margin-bottom: 5px;
 	width: 100%;
@@ -585,86 +615,86 @@ ul{
 	font-size: 8px;
 }
 
-.btn-scp{
-	background: rgb(125,133,213);
-	background: linear-gradient(90deg, rgba(125,133,213,1) 0%, rgba(148,187,233,1) 100%);
+.btn-scp {
+	background: rgb(125, 133, 213);
+	background: linear-gradient(90deg, rgba(125, 133, 213, 1) 0%, rgba(148, 187, 233, 1) 100%);
 	color: black;
 	font-weight: bold;
 	font-size: 15px;
 }
 
-.cd-info a{
+.cd-info a {
 	text-decoration: none;
-	color:aqua;
+	color: aqua;
 }
 
-.card-text{
+.card-text {
 	background-color: #c9a8a82f;
 	border-radius: 5%;
 	font-size: 12px;
 }
 
-#bc-more{
+#bc-more {
 	display: flex;
 	justify-content: center;
-	margin:350px;
+	margin: 350px;
 }
 
-#liveshare{
+#liveshare {
 	margin: 25px;
 }
 
-.liveShare-component{
+.liveShare-component {
 	width: 100%;
 	position: relative;
 	padding: 10px;
 	margin: 25px;
 	background-color: #000;
 }
-	
-.liveShare-rooms{
+
+.liveShare-rooms {
 	display: flex;
 	justify-content: center;
-	
-}
-
-#bx-trailer{
-	background: rgb(2,0,36);
-	background: linear-gradient(90deg, rgba(2,0,36,1) 16%, rgba(6,5,85,1) 29%, rgba(8,7,106,1) 40%, rgba(9,9,121,1) 47%, rgba(34,7,148,1) 55%, rgba(51,6,166,1) 67%, rgba(39,40,173,1) 79%, rgba(36,50,175,1) 83%, rgba(33,58,177,1) 86%, rgba(21,94,185,1) 100%);
 
 }
 
-#bk-trailer{
+#bx-trailer {
+	background: rgb(2, 0, 36);
+	background: linear-gradient(90deg, rgba(2, 0, 36, 1) 16%, rgba(6, 5, 85, 1) 29%, rgba(8, 7, 106, 1) 40%, rgba(9, 9, 121, 1) 47%, rgba(34, 7, 148, 1) 55%, rgba(51, 6, 166, 1) 67%, rgba(39, 40, 173, 1) 79%, rgba(36, 50, 175, 1) 83%, rgba(33, 58, 177, 1) 86%, rgba(21, 94, 185, 1) 100%);
+
+}
+
+#bk-trailer {
 	padding: 10px;
 	margin: 25px;
 }
 
-.spotlight-eps{
+.spotlight-eps {
 	width: 100%;
 	margin-bottom: 25px;
 }
 
-.bx-ep{
+.bx-ep {
 	width: 100%;
 	display: flex;
 	margin: 0;
 	padding: 0;
-	
+
 }
 
-.video-1{
+.video-1 {
 	padding: 2px;
 	margin: 5px;
 	background: rgba(255, 255, 255, 0.123);
-	
+
 }
 
-.video-1 p{
+.video-1 p {
 	font-size: smaller;
 	color: white;
 }
 
-.video-1 h5{
+.video-1 h5 {
 	font-weight: bold;
 	font-size: 12px;
 	color: white;
@@ -672,9 +702,8 @@ ul{
 
 
 footer {
-	background: #000;
+	background: #33333357;
 	padding: 50px 0px 20px 0px;
-	position: relative;
 }
 
 footer h4 {
@@ -702,11 +731,11 @@ footer ul li {
 	margin: 0 5px;
 }
 
-footer i{
+footer i {
 	color: white;
 }
 
-footer i:hover{
+footer i:hover {
 	color: #8ba9c2;
 }
 
@@ -714,41 +743,53 @@ footer i:hover{
 
 @media (max-width: 575.98px) {
 	.btn-custom {
-		margin: 10px 15px;
+		margin: 0;
 		font-size: 1em;
-	}
-
-	.desc__btn{
-		margin-top: 50%;
-		margin-left: 95%;
-		width: 100%;
 	}
 
 	swiper-slide {
 		color: transparent;
 	}
-	
+
+	nav.navbar-transparente {
+		margin: 0;
+		padding: 0;
+	}
+
+	.navbar-brand{
+		margin-top: -25px;
+	}
+
+	.navbar-toggler{
+		margin-top: -25px;
+
+	}
+
+	swiper-slide img {
+		width: 70px ;
+		height: 150px;
+	}
+
+	.img__overlay {
+		display: none;
+	}
+
+	.tpk-recente{
+		margin-top: 55px;
+	}
+
 }
-
-
 
 @media (min-width: 576px) and (max-width: 767.98px) {
 	h1 {
 		font-size: 3em;
 	}
+
 	.btn-custom {
 		margin: 10px 15px;
 	}
-	.desc__btn{
-		margin-top: 10px;
-		margin-left: 25px;
-		border: none;
-		width: 100%;
-		background: linear-gradient(90deg, rgba(125,133,213,1) 0%, rgba(148,187,233,1) 100%);
-		font-weight: bold;
-	}
 
-	.img__overlay:hover{
+	.img__overlay:hover {
 		width: 0;
 		color: transparent;
 	}
@@ -769,7 +810,7 @@ footer i:hover{
 }
 
 /* Extra large devices (large desktops, 1200px and up)*/
-@media (min-width: 1200px){
+@media (min-width: 1200px) {
 	h1 {
 		font-size: 6em;
 	}
